# Unitree_Go2_Local_Nav

./: .gitignore  README.md  start_go2_base.sh  start_go2_nav.sh
src/MDog/bringup/mdog_bringup/: CMakeLists.txt  package.xml
src/MDog/bringup/mdog_bringup/launch/: mdog_local_nav.launch.py
src/MDog/bringup/mdog_bringup/rviz/: mdog_local_nav.rviz
src/MDog/interfaces/mdog_body_msgs/: CMakeLists.txt  package.xml
src/MDog/interfaces/mdog_body_msgs/msg/: BodyEnvelope.msg
src/MDog/interfaces/mdog_grid_msgs/: CMakeLists.txt  package.xml
src/MDog/interfaces/mdog_grid_msgs/msg/: HeightCell.msg  HeightGrid.msg  LocalGrid.msg
src/MDog/interfaces/mdog_intent_msgs/: CMakeLists.txt  package.xml
src/MDog/interfaces/mdog_planning_msgs/: CMakeLists.txt  package.xml
src/MDog/interfaces/mdog_traversability_msgs/: CMakeLists.txt  package.xml
src/MDog/mdog_bringup/: CMakeLists.txt  package.xml
src/MDog/mdog_bringup/launch/: mdog_local_nav.launch.py
src/MDog/mdog_bringup/rviz/: mdog_local_nav.rviz
src/MDog/mdog_interfaces/: CMakeLists.txt  package.xml
src/MDog/mdog_interfaces/msg/: GridCell.msg  LocalGrid.msg  NavDecision.msg  NavFeedback.msg  OwnerIntent.msg  Traversability.msg
src/MDog/mdog_local_planner/: CMakeLists.txt  package.xml
src/MDog/mdog_local_planner/src/: local_planner_node.cpp
src/MDog/mdog_owner_intent_ui/: CMakeLists.txt  package.xml
src/MDog/mdog_owner_intent_ui/launch/: mdog_owner_intent_ui.launch.py
src/MDog/mdog_owner_intent_ui/scripts/: mdog_owner_intent_ui.py
src/MDog/mdog_owner_model/: CMakeLists.txt  package.xml
src/MDog/mdog_owner_model/src/: owner_model_node.cpp
src/MDog/mdog_pointcloud_fusion/: CMakeLists.txt  package.xml
src/MDog/mdog_pointcloud_fusion/src/: pointcloud_fusion_node.cpp
src/MDog/mdog_semantic_map/: CMakeLists.txt  package.xml
src/MDog/mdog_semantic_map/src/: semantic_map_node.cpp
src/MDog/mdog_traversability/: CMakeLists.txt  package.xml
src/MDog/mdog_traversability/src/: traversability_node.cpp
src/MDog/models/mdog_dog_model/: CMakeLists.txt  package.xml
src/MDog/models/mdog_dog_model/src/: dog_model_node.cpp
src/MDog/models/mdog_owner_model/: CMakeLists.txt  package.xml
src/MDog/models/mdog_owner_model/src/: owner_model_node.cpp
src/MDog/navigation/mdog_cmd_vel_output/: CMakeLists.txt  package.xml
src/MDog/navigation/mdog_cmd_vel_output/src/: cmd_vel_output_node.cpp
src/MDog/navigation/mdog_intent_arbitrator/: CMakeLists.txt  package.xml
src/MDog/navigation/mdog_intent_arbitrator/src/: intent_arbitrator_node.cpp
src/MDog/navigation/mdog_traversability_evaluator/: CMakeLists.txt  package.xml
src/MDog/navigation/mdog_traversability_evaluator/src/: traversability_evaluator_node.cpp
src/MDog/perception/mdog_cloud_fusion/: CMakeLists.txt  package.xml
src/MDog/perception/mdog_cloud_fusion/src/: cloud_fusion_node.cpp
src/MDog/perception/mdog_cloud_self_filter/: CMakeLists.txt  package.xml
src/MDog/perception/mdog_cloud_self_filter/src/: cloud_self_filter_node.cpp
src/MDog/perception/mdog_cloud_transform/: CMakeLists.txt  package.xml
src/MDog/perception/mdog_cloud_transform/src/: cloud_transform_node.cpp
src/MDog/tools/mdog_system_checks/: CMakeLists.txt  package.xml
src/MDog/tools/mdog_system_checks/scripts/: mdog_topic_probe.py
src/MDog/ui/mdog_owner_intent_ui/: CMakeLists.txt  package.xml
src/MDog/ui/mdog_owner_intent_ui/launch/: mdog_owner_intent_ui.launch.py
src/MDog/ui/mdog_owner_intent_ui/scripts/: mdog_owner_intent_ui.py
src/MDog/world_model/mdog_body_marker_viz/: CMakeLists.txt  package.xml
src/MDog/world_model/mdog_body_marker_viz/src/: body_marker_viz_node.cpp
src/MDog/world_model/mdog_height_grid_builder/: CMakeLists.txt  package.xml
src/MDog/world_model/mdog_height_grid_builder/src/: height_grid_builder_node.cpp
src/MDog/world_model/mdog_occupancy_projection/: CMakeLists.txt  package.xml
src/MDog/world_model/mdog_occupancy_projection/src/: occupancy_projection_node.cpp
src/MDog/world_model/mdog_semantic_labeler/: CMakeLists.txt  package.xml
src/MDog/world_model/mdog_semantic_labeler/src/: semantic_labeler_node.cpp
src/MDog/world_model/mdog_semantic_marker_viz/: CMakeLists.txt  package.xml
src/MDog/world_model/mdog_semantic_marker_viz/src/: semantic_marker_viz_node.cpp
src/Unitree_Go2/go2_bringup/: CMakeLists.txt  package.xml
src/Unitree_Go2/go2_bringup/launch/: go2_base.launch.py  go2_sim_fused_headless.launch.py  localization_stub.launch.py
src/Unitree_Go2/go2_bringup/rviz/: go2_base.rviz
src/Unitree_Go2/go2_cmd_bridge/: CMakeLists.txt  package.xml
src/Unitree_Go2/go2_cmd_bridge/src/: go2_cmd_vel_bridge.cpp
src/Unitree_Go2/go2_description/: CMakeLists.txt  package.xml
src/Unitree_Go2/go2_description/dae/: calf.dae
src/Unitree_Go2/go2_description/src/: go2_kinematic_planar_move.cpp
src/Unitree_Go2/go2_description/urdf/: go2_d435i_mount.xacro  go2_description.urdf  go2_description.urdf.xacro  go2_gazebo_d435i_sensor.xacro  go2_gazebo_planar_move.xacro  go2_lidar.xacro  go2_nav_frames.xacro  go2_official_body.xacro  go2_realsense_d435i.xacro
src/Unitree_Go2/go2_examples/: CMakeLists.txt  package.xml
src/Unitree_Go2/go2_examples/src/control/: go2_robot_state_client.cpp  go2_sport_client.cpp  go2_stand_example.cpp
src/Unitree_Go2/go2_examples/src/guide_dog/: guide_dog_manager.cpp
src/Unitree_Go2/go2_examples/src/telemetry/: read_wireless_controller.cpp
src/Unitree_Go2/go2_state_estimation/: CMakeLists.txt  package.xml
src/Unitree_Go2/go2_state_estimation/src/: go2_state_estimator.cpp
src/Unitree_Go2/go2_vel_controller/: CMakeLists.txt  package.xml
src/Unitree_Go2/go2_vel_controller/launch/: go2_vel_controller.launch.py
src/Unitree_Go2/go2_vel_controller/scripts/: go2_vel_controller.py
src/Unitree_Go2/interfaces/unitree_api/: CMakeLists.txt
src/Unitree_Go2/interfaces/unitree_go/: CMakeLists.txt
