<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mdog_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for MDog local semantic navigation on the Go2 simulation base.</description>
  <maintainer email="user@example.com">MDog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mdog_interfaces</exec_depend>
  <exec_depend>mdog_local_planner</exec_depend>
  <exec_depend>mdog_owner_intent_ui</exec_depend>
  <exec_depend>mdog_owner_model</exec_depend>
  <exec_depend>mdog_pointcloud_fusion</exec_depend>
  <exec_depend>mdog_semantic_map</exec_depend>
  <exec_depend>mdog_traversability</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
