<?xml version="1.0"?>
<package format="3">
  <name>mdog_traversability_evaluator</name>
  <version>0.1.0</version>
  <description>Evaluates directional traversability from MDog semantic local grids.</description>
  <maintainer email="user@example.com">MDog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>mdog_grid_msgs</depend>
  <depend>mdog_traversability_msgs</depend>
  <depend>rclcpp</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
