<?xml version="1.0"?>
<package format="3">
  <name>mdog_cloud_fusion</name>
  <version>0.1.0</version>
  <description>Fuses filtered MDog point clouds into one local cloud.</description>
  <maintainer email="user@example.com">MDog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
