<?xml version="1.0"?>
<package format="3">
  <name>mdog_cloud_transform</name>
  <version>0.1.0</version>
  <description>Transforms raw MDog point clouds into the local navigation frame.</description>
  <maintainer email="user@example.com">MDog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
