<?xml version="1.0"?>
<package format="3">
  <name>mdog_system_checks</name>
  <version>0.1.0</version>
  <description>Diagnostic command-line checks for the MDog modular navigation stack.</description>
  <maintainer email="user@example.com">MDog</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
